--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
 
 	
 	<script type="module" src="js/main.js"></script>
+	<script type="module" src="js/ShaderProgram.js"></script>
+	<script type="module" src="js/ShaderManager.js"></script>
 	<script type="module" src="js/paintUI.js"></script>
 	<script type="module" src="js/PlanetUI.js"></script>
 	<script type="module" src="js/TerrainUI.js"></script>
