--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     <div class="container">
         <h1>Planet Maker</h1>
+
+		<div id="stats"></div>
+
         
         <div class="box">
             <div class="side-panel">
