Fixed rendering bug with glow, cleaned up uneeded library files, removed old console.log()s

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
         </div> 
 </div>
-	<script src="js/libs/toji-gl-matrix-accefb6/dist/gl-matrix-min.js"></script>
+	<script src="js/libs/gl-matrix-min.js"></script>
 	<script src="js/libs/noisejs-master/perlin.js"></script>
 
 	
